--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,6 +4,13 @@ body {
     background-color: lightgray;
 }
 
+h1{
+    margin-left: 2%;
+    text-align: center;
+    text-decoration: underline;
+    text-shadow: 3px 3px gray;
+}
+
 #formTitle {
     font-size: 2em;
     color: darkslategrey;
@@ -97,6 +104,27 @@ body {
     background-color: rgb(133,72,193);
 }
 
+#leftDash{
+    background-color: white;
+    height: 100vh;
+    box-shadow: 10px 0px 20px #888888;
+    margin-right: 1%;
+    padding: 1em;
+}
+
+#rightDash{
+    background-color: lightgray;
+    width: 74%;
+}
+
+.innerDiv{
+    min-height: 80vh;
+    margin: 3% 2%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: darkgray;
+    background-color: darkgray;
+}
 
 /*
 *
