--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -9,6 +9,8 @@ h1{
     text-align: center;
     text-decoration: underline;
     text-shadow: 3px 3px gray;
+    padding: 0.3em;
+    margin: 0;
 }
 
 #formTitle {
@@ -123,7 +125,7 @@ h1{
     border-style: solid;
     border-width: 1px;
     border-color: darkgray;
-    background-color: darkgray;
+    background-color: #eee;
 }
 
 /*
