--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -112,11 +112,14 @@ h1{
     box-shadow: 10px 0px 20px #888888;
     margin-right: 1%;
     padding: 1em;
+    width: 28%;
 }
 
 #rightDash{
+    position: absolute;
+    right: 0;
     background-color: lightgray;
-    width: 74%;
+    width: 71%;
 }
 
 .innerDiv{
