Opties toegevoegd voor leerkracht en school bij signup

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,10 @@ body {
     background-color: rgba(160, 160, 160, 0.6);
 }
 
+#leerkrachtOption{
+    display: none;
+}
+
 .modal-dialog {
     margin-top: 80px;
 }
