--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,40 +1,25 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 body {
     height: 100%;
     color: black;
     background-color: lightgray;
 }
 
-h1{
+h1 {
     margin-left: 2%;
     text-align: center;
     text-decoration: underline;
     text-shadow: 3px 3px gray;
     padding: 0.3em;
     margin: 0;
-}
-
-#formTitle {
-    font-size: 2em;
-    color: darkslategrey;
-    margin: 0;
-}
-
-.carouselPicture {
-    max-height: calc(100vh - 52px);
-    width: 100%;
-}
-
-#signup-form {
-    z-index: 9999;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 52px;
-    border-color: white;
-    border-width: 3px;
-    border-style: solid;
-    padding: 2em;
-    background-color: rgba(160, 160, 160, 0.6);
 }
 
 .modal-dialog {
@@ -47,7 +32,7 @@ h1{
     border-radius: 0px;
 }
 
-.navbar-brand{
+.navbar-brand {
     font-family: serif;
     font-size: 3em;
 }
@@ -72,42 +57,42 @@ h1{
     background-color: white;
 }
 
-.homeText {
-    z-index: 2;
-    font-size: 1.8em;
-    position: absolute;
-    display: inline-block;
-    color: white;
-    background-color: rgba(152, 106, 157, 0.8);
-    max-width: 40%;
-    top: 15%;
-    left: 5%;
-    border-radius: 5px;
-    padding: 1em;
-}
-
-#login-form {
-    z-index: 3;
-    position: fixed;
-    right: 10%;
-    top: 10%;
-    border-color: white;
-    border-width: 3px;
-    border-style: solid;
-    padding: 2em;
-    background-color: rgba(160, 160, 160, 0.6);
-}
-
-.navbarDashboard{
+.navbarDashboard {
     display: block;
 }
 
-.navbarDashboard li:hover{
-    background-color: rgb(133,72,193);
+.navbarDashboard li:hover {
+    background-color: rgb(133, 72, 193);
 }
 
-#leftDash{
-    background-color: white;
+ul#menu{
+    list-style: none;
+    padding-left: 0em;
+}
+
+ul#menu li{
+    padding: 0.5em;
+    background: gray;
+    margin: 0;
+    padding: 0;
+    border-style: none none solid none;
+    border-color: lightgray;
+    border-width: 1px;
+}
+
+ul#menu li a{
+    display: block;
+    color: white;
+    padding: 0.5em;
+}
+
+ul#menu li a:hover{
+    text-decoration: none;
+    background-color: dimgray;
+}
+
+#leftDash {
+    background-color: whitesmoke;
     height: 100vh;
     box-shadow: 10px 0px 20px #888888;
     margin-right: 1%;
@@ -115,21 +100,58 @@ h1{
     width: 28%;
 }
 
-#rightDash{
-    position: absolute;
-    right: 0;
+#rightDash {
     background-color: lightgray;
+    right: -2vh;
     width: 70%;
 }
 
-.innerDiv{
+.innerDiv {
     min-height: 80vh;
-    margin: 3% 2%;
-    border-style: solid;
-    border-width: 1px;
-    border-color: darkgray;
-    background-color: #eee;
+    margin: 3% 0% 3% 2%;
 }
+
+.pressedDiv {
+    padding: 1em;
+    margin: 2em 0.5em 2em 0.5em;
+    background: rgb(180, 180, 180);
+    border-top: 1px solid rgb(120, 120, 120);
+    border-left: 1px solid rgb(120, 120, 120);
+    border-bottom: 1px solid rgb(225, 225, 225);
+    border-right: 1px solid rgb(225, 225, 225);
+    box-shadow: 0px 0px 5px rgba(33, 62, 83, 0.7) inset;
+    -moz-box-shadow: 0px 0px 5px rgba(33, 62, 83, 0.7) inset;
+    -webkit-box-shadow: 0px 0px 5px rgba(33, 62, 83, 0.7) inset;
+    overflow: hidden;
+}
+
+.rightPressedDiv {
+    margin: 2em 0em 2em 0.5em;
+}
+
+#messagesBox {
+    background-color: rgb(164, 118, 209);
+    border: solid 1px;
+    border-color: rgb(148, 95, 201) rgb(191, 159, 223) rgb(191, 159, 223) rgb(148, 95, 201);
+    padding: 0.5em;
+    margin-top: 0.5em;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(33, 62, 83, 0.7) inset;
+    -moz-box-shadow: 0px 0px 5px rgba(33, 62, 83, 0.7) inset;
+    -webkit-box-shadow: 0px 0px 5px rgba(33, 62, 83, 0.7) inset;
+}
+
+#profilePic {
+    height: 10em;
+    width: 10em;
+    float: right;
+    background-color: lightgray;
+    border: dotted 2px rgb(70, 70, 70);
+    box-shadow: 5px 5px 8px gray;
+    -moz-box-shadow: 5px 5px 8px gray;
+    -webkit-box-shadow: 5px 5px 8px gray;
+}
+
 
 /*
 *
@@ -138,20 +160,17 @@ h1{
 */
 
 @media screen and (max-width: 768px) {
-
-    #leftDash{
+    #leftDash {
         height: auto;
         width: 100%;
         box-shadow: none;
     }
-    
-    #leftDash ul{
+    #leftDash ul {
         height: 1.7em;
         width: 100%;
         padding: 0;
     }
-    
-    #leftDash ul li{
+    #leftDash ul li {
         float: left;
         list-style: none;
         display: block;
@@ -162,18 +181,14 @@ h1{
         width: calc(100%/3);
         background-color: dimgray;
     }
-    
-    #leftDash a{
+    #leftDash a {
         color: white;
         text-decoration: none;
     }
-    
-    #leftDash ul li:hover{
+    #leftDash ul li:hover {
         background-color: gray;
     }
-    
-    #rightDash{
+    #rightDash {
         width: 100%;
     }
-        
 }
