--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,21 @@ body {
     background-color: rgb(45, 45, 45);
 }
 
+#backgroundSite{
+    height: 36vh;
+    background-color: black;
+    background-color: rgb(30,30,30);
+    border-top: solid;
+    border-color: dimgray;
+    border-width: 0.2em;
+    margin-top: 1em;
+}
+
+h1{
+    font-size: 3.5em;
+    color: white;
+}
+
 #formTitle {
     font-size: 2em;
     color: darkslategrey;
@@ -11,8 +26,9 @@ body {
 }
 
 .carouselPicture {
-    max-height: calc(100vh - 52px);
-    width: 100%;
+    position: relative;
+    max-height: calc(75vh - 52px);
+    width: 75%;
 }
 
 #signup-form {
@@ -69,23 +85,24 @@ body {
 
 .homeText {
     z-index: 2;
-    font-size: 1.8em;
+    font-size: 1.5em;
     position: absolute;
     display: inline-block;
     color: white;
     background-color: rgba(152, 106, 157, 0.8);
     max-width: 40%;
-    top: 15%;
-    left: 5%;
+    top: 10%;
+    left: 3%;
     border-radius: 5px;
     padding: 1em;
 }
 
 #login-form {
     z-index: 3;
-    position: fixed;
-    right: 10%;
-    top: 10%;
+    position: absolute;
+    right: 0%;
+    top: 52px;
+    width: 25%;
     border-color: white;
     border-width: 3px;
     border-style: solid;
