--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -5,6 +5,7 @@ body {
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    font-family: helvetica;
 }
 
 body {
@@ -74,16 +75,17 @@ ul#menu li{
     padding: 0.5em;
     background: gray;
     margin: 0;
-    padding: 0;
+    padding: 0em;
     border-style: none none solid none;
     border-color: lightgray;
     border-width: 1px;
+    font-size: 1.2em;
 }
 
 ul#menu li a{
     display: block;
     color: white;
-    padding: 0.5em;
+    padding: 1.5em;
 }
 
 ul#menu li a:hover{
@@ -96,7 +98,7 @@ ul#menu li a:hover{
     height: 100vh;
     box-shadow: 10px 0px 20px #888888;
     margin-right: 1%;
-    padding: 1em;
+    padding: 0.5em;
     width: 28%;
 }
 
@@ -150,6 +152,27 @@ ul#menu li a:hover{
     box-shadow: 5px 5px 8px gray;
     -moz-box-shadow: 5px 5px 8px gray;
     -webkit-box-shadow: 5px 5px 8px gray;
+}
+
+#profilePicInstellingen{
+    height: 10em;
+    width: 10em;
+    background-color: lightgray;
+    border: dotted 2px rgb(70, 70, 70);
+    box-shadow: 5px 5px 8px gray;
+    -moz-box-shadow: 5px 5px 8px gray;
+    -webkit-box-shadow: 5px 5px 8px gray;
+}
+
+.float-right{
+    float: right;
+}
+
+h3#menuTitle{
+    text-align: center;
+    background-color: blueviolet;
+    padding: 0.5em;
+    margin-right: 0;
 }
 
 
