Login werkt. Linken werken (+ overal gelijk). Design voorlopig = hoofdpagina. Straks voeg ik tekst toe.

--- a/css/index3.css
+++ b/css/index3.css
@@ -54,6 +54,12 @@ h3{
 #myCarousel img {
     left: 50%
 }
+#leerling {
+    color: white;
+    text-align: center;
+    display: block;
+   
+}
 
 #signup-form {
     z-index: 9999;
